--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,6 @@
     width: 85%;
     height: 1500px;
     margin-top: 10px;
-
 }
 
 .img-holder {
@@ -24,43 +23,98 @@
     text-align: center;
     color: rgb(255, 255, 255);
     text-shadow: 0 0 10px #070202;
-    
 }
-#slider-and-topic{
+
+#slider-and-topic {
     width: 100%;
-    height: auto;
     background-color: rgba(248, 248, 247, 0.466);
     padding: 20px
 }
-body{
-    background-image: url("../images/background1.jpg")
+
+body {
+    background-image: url("../images/background2.jpeg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
-.custom{
-    background-color: #00000046
+
+.custom {
+    background-color: #014064
 }
-.grid-home{
+
+.grid-home {
     width: 100%;
-    height: auto;
-    background-color: rgba(92, 250, 145, 0.514);
-    padding: 10px
+    background-color: rgba(92, 250, 145, 0);
+    padding: 10px;
+    border: 1.5px dashed #941802c7;
 }
-.list-media-text>h6,p{
-    margin-bottom:0;
+
+.list-media-text>h6,
+p {
+    margin-bottom: 0;
     text-align: left;
     margin-left: 20px
 }
-.small-text{
+
+.small-text {
     font-size: 14px;
     font-style: italic
 }
+
 hr.style11 {
-	border-top: 1px solid #fa1f1f;
-	border-bottom: 1px solid rgb(253, 90, 90);
+    border-top: 1px solid #fa1f1f;
+    border-bottom: 1px solid rgb(253, 90, 90);
 }
-.bang-xep-hang{
+
+.bang-xep-hang {
     width: 100%;
-    height: auto;
+    height: 100%;
     background-color: rgba(228, 245, 72, 0.514);
     padding: 10px;
-    margin-top:10px
+    margin-top: 10px
+}
+
+#album-hot {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(53, 247, 95, 0.493);
+    padding: 10px;
+    margin-top: 10px
+}
+
+#footer {
+    position: absolute;
+    width: 100%;
+    border: none;
+    height: fit-content;
+    padding: 10px 0px;
+    margin-top: 10px
+}
+
+.sm-pad{
+    padding: 5px;
+}
+#artist-hot{
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+    margin-top: 10px
+}
+.bg-title{
+    
+    position: relative;
+    z-index: 1;
+}
+.bg-title:before{
+    border-top: 2px solid #dfdfdf;
+    content: "";
+    margin: 0 auto;
+    /* this centers the line to the full width specified */
+    position: absolute;
+    /* positioning must be absolute here, and relative positioning must be applied to the parent */
+    top: 50%;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 95%;
+    z-index: -1;
 }
