--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,8 @@ body {
     background-image: url("../images/background2.jpeg");
     background-repeat: no-repeat;
     background-attachment: fixed;
+    background-blend-mode: soft-light;
+    background-color: #0073b1e3
 }
 
 .custom {
@@ -45,7 +47,8 @@ body {
     width: 100%;
     background-color: rgba(92, 250, 145, 0);
     padding: 10px;
-    border: 1.5px dashed #941802c7;
+    border: 1.5px dashed #8cdbff;
+    box-shadow: 10px 5px 5px rgba(1, 78, 119, 0.603);
 }
 
 .list-media-text>h6,
@@ -68,7 +71,7 @@ hr.style11 {
 .bang-xep-hang {
     width: 100%;
     height: 100%;
-    background-color: rgba(228, 245, 72, 0.514);
+    background-color: transparent;
     padding: 10px;
     margin-top: 10px
 }
@@ -76,9 +79,9 @@ hr.style11 {
 #album-hot {
     width: 100%;
     height: 100%;
-    background-color: rgba(53, 247, 95, 0.493);
+    background-color: transparent   ;
     padding: 10px;
-    margin-top: 10px
+    margin-top: 10px;
 }
 
 #footer {
@@ -89,38 +92,65 @@ hr.style11 {
     padding-top: 100px;
     padding-bottom: 20px;
     margin-top: 40px;
-    background-image: url('../images/bg-footer.jpg')
+    background-image: url('../images/bg-footer.jpg');
+    background-blend-mode: hard-light;
+    background-color: #0073b1e3
 }
 
-.sm-pad{
+.sm-pad {
     padding: 5px;
+    
 }
-#artist-hot{
+
+#artist-hot {
     width: 100%;
     height: 100%;
     padding: 10px;
-    margin-top: 10px
+    
 }
-#myChart{
+
+#myChart {
     width: 100%;
     height: 100%;
     background-color: rgba(228, 245, 72, 0.514);
     padding: 10px;
-    margin-top: 10px;
+    margin-top: 15px;
 }
+
 @font-face {
     font-family: 'Coiny';
     src: url('../font/coiny.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
-h4{
-    font-family: 'Coiny'
+
+h4 {
+    font-family: 'Coiny';
+    text-shadow: 0 0 15px rgb(255, 255, 255), 0 0 15px rgb(255, 255, 255),0 0 15px rgb(255, 255, 255);
+    color: #0038a0;
+    background-image: url('../images/blue-glow-line-png-22.png');
+    margin-top:20px
 }
-.borderimg1 { 
+
+.borderimg1 {
     border: 10px solid transparent;
-    
-    -webkit-border-image: url('../images/border.png') 30 round; /* Safari 3.1-5 */
-    -o-border-image: url('../images/border.png') 30 round; /* Opera 11-12.1 */
-    border-image: url('../images/border.png') 30 round;
+    border-image: url('../images/border1.png') 30 round;
+}
+#video-hot{
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+    padding: 10px;
+    margin-top: 10px;
+}
+a{
+    color: #ffffff;
+    text-shadow: 0 0 15px rgb(48, 5, 240), 0 0 15px rgb(48, 5, 240),0 0 15px rgb(48, 5, 240),;
+}
+.card-text{
+    text-align: center;
+    margin: 0
+}
+.shadow{
+    box-shadow: 5px 5px 5px rgba(255, 230, 179, 0.603);
 }
