--- a/css/main.css
+++ b/css/main.css
@@ -32,11 +32,12 @@
 }
 
 body {
-    background-image: url("../images/background2.jpeg");
+    background-image: url("../images/background3.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-blend-mode: soft-light;
-    background-color: #0073b1e3
+    background-size: 100%;
+    /* background-blend-mode:color-burn;
+    background-color: #027ebdc5 */
 }
 
 .custom {
@@ -45,7 +46,7 @@ body {
 
 .grid-home {
     width: 100%;
-    background-color: rgba(92, 250, 145, 0);
+    background-color: rgba(199, 237, 250, 0.5);
     padding: 10px;
     border: 1.5px dashed #8cdbff;
     box-shadow: 10px 5px 5px rgba(1, 78, 119, 0.603);
@@ -55,12 +56,20 @@ body {
 p {
     margin-bottom: 0;
     text-align: left;
-    margin-left: 20px
+    margin-left: 20px;
+    
 }
 
 .small-text {
     font-size: 14px;
-    font-style: italic
+    font-style: italic;
+    font-family: Mitr-ExtraLight;
+    text-shadow: 1px 1px 1px rgba(250, 0, 0, 0.904),1px 1px #000000;
+}
+.text-light{
+    font-size:14px; 
+    font-family:'Mitr-ExtraLight';
+    text-shadow: 1px 1px 1px rgba(250, 0, 0, 0.904),1px 1px #000000;
 }
 
 hr.style11 {
@@ -70,10 +79,11 @@ hr.style11 {
 
 .bang-xep-hang {
     width: 100%;
-    height: 100%;
+    height: auto;
     background-color: transparent;
     padding: 10px;
-    margin-top: 10px
+    margin-top: 10px;
+    
 }
 
 #album-hot {
@@ -112,9 +122,8 @@ hr.style11 {
 #myChart {
     width: 100%;
     height: 100%;
-    background-color: rgba(228, 245, 72, 0.514);
-    padding: 10px;
     margin-top: 15px;
+    background-color: #1722189a;
 }
 
 @font-face {
@@ -127,7 +136,7 @@ hr.style11 {
 h4 {
     font-family: 'Coiny';
     text-shadow: 0 0 15px rgb(255, 255, 255), 0 0 15px rgb(255, 255, 255),0 0 15px rgb(255, 255, 255);
-    color: #0038a0;
+    color: #246ce7;
     background-image: url('../images/blue-glow-line-png-22.png');
     margin-top:20px
 }
@@ -149,8 +158,46 @@ a{
 }
 .card-text{
     text-align: center;
-    margin: 0
+    margin: 0;
+    color: white;
+    text-shadow:
+    -1px -1px 10px rgb(0, 30, 163),
+    1px -1px 10px rgb(0, 30, 163),
+    -1px 1px 10px rgb(0, 30, 163),
+    1px 1px 10px rgb(0, 30, 163);  
 }
 .shadow{
-    box-shadow: 5px 5px 5px rgba(255, 230, 179, 0.603);
+    box-shadow: 2px 2px 2px rgba(238, 161, 9, 0.719);
+}
+@font-face {
+    font-family: 'Mitr';
+    src: url('../font/Mitr-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Mitr-ExtraLight';
+    src: url('../font/Mitr-Light.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+.media>div>h6,p, ul>a{
+    text-shadow: 2px 2px 2px rgba(250, 0, 0, 0.904),2px 2px 2px #000000;
+    color: #ffffff;
+    font-family: 'Mitr';
+}
+.media>img,
+hr{
+    box-shadow: 2px 2px 2px rgba(250, 0, 0, 0.904);
+}
+ul>a:hover{
+    color: white;
+    text-shadow:
+    -1px -1px 10px rgb(0, 30, 163),
+    1px -1px 10px rgb(0, 30, 163),
+    -1px 1px 10px rgb(0, 30, 163),
+    1px 1px 10px rgb(0, 30, 163);  
+}
+.license{
+    all:unset;
 }
