--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,24 @@
     height: 100%;
     margin-top: 10px;
 }
-
+@font-face {
+    font-family: 'Coiny';
+    src: url('../font/coiny.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Mitr';
+    src: url('../font/Mitr-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Mitr-ExtraLight';
+    src: url('../font/Mitr-Light.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
 .img-holder {
     position: relative;
     display: inline-block;
@@ -25,26 +42,26 @@
     text-shadow: 0 0 10px #070202;
 }
 
-#slider-and-topic {
+#slider-content {
     width: 100%;
     background-color: rgba(248, 248, 247, 0.466);
     padding: 20px
 }
 
 body {
-    background-image: url("../images/background3.jpg");
+    background-image: url("../images/background4.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: 100%;
-    /* background-blend-mode:color-burn;
-    background-color: #027ebdc5 */
+    background-blend-mode:color-burn;
+    background-color: #027fbdda
 }
 
 .custom {
     background-color: #014064
 }
 
-.grid-home {
+.grid-image {
     width: 100%;
     background-color: rgba(199, 237, 250, 0.5);
     padding: 10px;
@@ -66,13 +83,13 @@ p {
     font-family: Mitr-ExtraLight;
     text-shadow: 1px 1px 1px rgba(250, 0, 0, 0.904),1px 1px #000000;
 }
-.text-light{
+.extralight-text{
     font-size:14px; 
     font-family:'Mitr-ExtraLight';
     text-shadow: 1px 1px 1px rgba(250, 0, 0, 0.904),1px 1px #000000;
 }
 
-hr.style11 {
+hr.hr-style {
     border-top: 1px solid #fa1f1f;
     border-bottom: 1px solid rgb(253, 90, 90);
 }
@@ -99,12 +116,12 @@ hr.style11 {
     width: 100%;
     border: none;
     height: fit-content;
-    padding-top: 100px;
-    padding-bottom: 20px;
+    padding-top: 20px;
+    padding-bottom: 50px;
     margin-top: 40px;
-    background-image: url('../images/bg-footer.jpg');
-    background-blend-mode: hard-light;
-    background-color: #0073b1e3
+    background-image: url('../images/footer-bg.png');
+    /* background-blend-mode: hard-light;*/
+    background-color: rgba(0, 0, 0, 0.664) 
 }
 
 .sm-pad {
@@ -119,29 +136,24 @@ hr.style11 {
     
 }
 
-#myChart {
+#reatimeChart {
     width: 100%;
     height: 100%;
     margin-top: 15px;
     background-color: #1722189a;
 }
 
-@font-face {
-    font-family: 'Coiny';
-    src: url('../font/coiny.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-}
+
 
 h4 {
     font-family: 'Coiny';
     text-shadow: 0 0 15px rgb(255, 255, 255), 0 0 15px rgb(255, 255, 255),0 0 15px rgb(255, 255, 255);
-    color: #246ce7;
+    color: #1d0281;
     background-image: url('../images/blue-glow-line-png-22.png');
     margin-top:20px
 }
 
-.borderimg1 {
+.glow-border {
     border: 10px solid transparent;
     border-image: url('../images/border1.png') 30 round;
 }
@@ -169,18 +181,7 @@ a{
 .shadow{
     box-shadow: 2px 2px 2px rgba(238, 161, 9, 0.719);
 }
-@font-face {
-    font-family: 'Mitr';
-    src: url('../font/Mitr-Regular.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'Mitr-ExtraLight';
-    src: url('../font/Mitr-Light.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-}
+
 .media>div>h6,p, ul>a{
     text-shadow: 2px 2px 2px rgba(250, 0, 0, 0.904),2px 2px 2px #000000;
     color: #ffffff;
