--- a/css/play-page.css
+++ b/css/play-page.css
@@ -57,21 +57,24 @@
     background-position: center;
     background-size: 7px 12px;
     width: 50px;
-    height: 50px;
+	height: 50px;
+	background-image: url('../images/play-page/button_open.png'); 
+	transition: 0.5s
 }
 
 .lp-vertical-nav {
 overflow: hidden;
-position: relative;
 text-align: left;
-position: fixed;
 width: 50px;
 transition: 0.5s;
-/*max-width: 50px;*/
-/*background-color: #3b4343;*/
 z-index: 981;
-background-color: rgba(255, 255, 255, 0.801);
+background-color: rgb(255, 255, 255);
 box-shadow: 2px 0 5px 0 rgba(76, 76, 76, 0.5);
+position: fixed;
+top: 50%;
+transform: translateY(-50%);
+border-bottom-right-radius: 20px;
+border-top-right-radius: 20px;
 }
 
 .lp-vertical-nav .nav-box {
@@ -87,7 +90,9 @@ box-shadow: 2px 0 5px 0 rgba(76, 76, 76, 0.5);
     box-shadow: 0 0 2px 0 rgba(76, 76, 76, 0.5);
     background-color: rgba(221, 227, 230, 0.5);
 }*/
-
+.footer-logo{
+	height: 70px; width: 140px;
+}
 .lp-vertical-nav .nav-box:hover .lp-vertical-nav .nav-box > .uk-navbar-dropdown {
     display: initial;
 }
@@ -122,7 +127,8 @@ box-shadow: 2px 0 5px 0 rgba(76, 76, 76, 0.5);
     width: 100%;
     height: calc(100% - 52px);
     margin-top: 50px;
-    padding-bottom: 20px;
+	padding-bottom: 20px;
+	vertical-align: middle; width: 150px;
 }
 
 #lp-vertical-nav-content::-webkit-scrollbar {
@@ -415,6 +421,7 @@ box-shadow: 2px 0 5px 0 rgba(76, 76, 76, 0.5);
 
 .content-footer-center {
 	width: 400px;
+	display: inline-block;
 	
 }
 
@@ -429,6 +436,9 @@ box-shadow: 2px 0 5px 0 rgba(76, 76, 76, 0.5);
 	color: rgb(255, 255, 255);
 	font-weight: bolder;
 	font-size: 18px
+}
+.content-footer-left{
+	display: inline-block; vertical-align: top
 }
 .content-footer-center >div >a {
 	margin: 0px;
